# air

./: .gitignore  CMakeLists.txt  readme.md
assets/: config.jsonc  resources.jsonc  scenario.jsonc
assets/shaders/: chromakey.fs  fog.fs  fog.vs
src/: game.cppm  main.cpp
src/components/: aircraft.cppm  components.cppm  data.cppm  render.cppm  world.cppm
src/core/: ConfigTypes.cppm  Constants.cppm  JsonConfig.cppm  ResourceManager.cppm  config-types.cppm  helpers.cppm  json-config.cppm  raylib-resource.cppm  resource-manager.cppm  resource-preloader.cppm  scenario-types.cppm  types.cppm  units-types.cppm
src/lib/: ray-logger.hpp  ray.hpp
src/player/: ground-check.cppm  player-camera.cppm  player-check.cppm  player-config.cppm  player-controls.cppm  player-dispatcher.cppm  player-physics.cppm  player-position.cppm  player-rotation.cppm  player.cppm  utils.cppm
src/player/systems/: ground-check.cppm
src/prefabs/: create-cockpit-widgets.cppm  create-cockpit.cppm  create-hud.cppm  create-player.cppm  create-scene.cppm  create-unit.cppm  create_player.cppm  create_scene.cppm  create_unit.cppm  prefabs.cppm
src/systems/: aircraft-mechanics.cppm  aircraft-physics.cppm  aircraft-simple-physics.cppm  camera.cppm  crash-landing-detection.cppm  movement.cppm  position.cppm  render-cockpit.cppm  render-debug.cppm  render-debugging.cppm  render-hud.cppm  render-models.cppm  render.cppm  rotation.cppm  systems.cppm  user-inputs.cppm  velocity.cppm  widgets-inputs.cppm  world-streamer.cppm
src/systems/renderers/: render-cockpit.cppm  render-crash-layout.cppm  render-debug.cppm  render-debugging.cppm  render-engines-status.cppm  render-hud.cppm  render-minimap.cppm  render-models.cppm  render-radar.cppm  render.cppm
src/systems/views/: cockpit.cppm  engine.cppm  hud.cppm  minimap.cppm  scene.cppm  view-base.cppm  views.cppm
src/utils/: accessors.cppm
